<resources>
    <string name="app_name">云校卫</string>
    <string name="login_by_account">账号登录</string>
    <string name="login_by_code">验证码登录</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_code">请输入手机验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="login_regist_mean_agree">登录注册代表同意</string>
    <string name="user_agreement">用户协议</string>
    <string name="agreement_and_login">同意协议并登录</string>
    <string name="send_success">发送成功</string>
    <string name="please_select_school">请选择学校</string>
    <string name="home">首页</string>
    <string name="message">消息</string>
    <string name="my">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="switch_identity">切换身份</string>
    <string name="account_set">账号设置</string>
    <string name="login_out">退出登录</string>
    <string name="student">学生</string>
    <string name="parent">家长</string>
    <string name="teacher">老师</string>
    <string name="confirm_to_login_out">确认要退出登录吗？</string>
    <string name="confirm_switch_to_parent">确认要切换到家长身份吗？</string>
    <string name="confirm_switch_to_teacher">确认要切换到老师身份吗？</string>
    <string name="head_avator">头像</string>
    <string name="real_name">真实姓名</string>
    <string name="change_pwd">修改密码</string>
    <string name="collect_face">人脸采集</string>
    <string name="change_phone">变更手机号</string>
    <string name="please_input_real_name">请输入真实姓名</string>
    <string name="commit">提交</string>
    <string name="confirm_commit">确认要提交吗？</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="please_input_new_password_again">请再次输入新密码</string>
    <string name="two_passwords_are_inconsistent">两次输入密码不一致</string>
    <string name="reset_pwd_success">重置密码成功</string>
    <string name="please_input_new_phone">请输入新手机号</string>
    <string name="reset_phone_success">重置手机号成功</string>
    <string name="face_collect">人脸采集</string>
    <string name="please_user_upload_three_face_photo">请上传三张用户本人人脸照片</string>
    <string name="shooting_without_glasses">拍照时请勿佩戴眼镜</string>
    <string name="first_face">正面照1</string>
    <string name="second_face">正面照2</string>
    <string name="third_face">正面照3</string>
    <string name="confirm_delete_this_face">确认要删除该人脸吗？</string>
    <string name="delete_success">删除成功</string>
    <string name="upload_success">上传成功</string>
    <string name="only_one_face_tips">为确保安全，最后一张人脸不允许删除</string>
    <string name="not_check_face">未检测到清晰的人脸</string>
    <string name="need_relogin">登录已过期，请重新登录</string>
    <string name="please_select_class">请选择班级</string>
    <string name="class_affair">班级事务</string>
    <string name="student_roster">学生花名册</string>
    <string name="class_timetable">班级课表</string>
    <string name="student_leave">学生请假</string>
    <string name="temp_manage">体温管理</string>
    <string name="select_course_manage">选课管理</string>
    <string name="select_course_statistic">选课统计</string>
    <string name="invitation_parent">邀约家长</string>
    <string name="open_parent_meeting">开家长会</string>
    <string name="student_leave_record">学生请假记录</string>
    <string name="face_manage">人脸管理</string>
    <string name="stu_status_manage">学籍管理</string>
    <string name="please_input_stu_status">请输入学籍号</string>
    <string name="commit_success">提交成功</string>
    <string name="monday">周一</string>
    <string name="sunday">周日</string>
    <string name="saturday">周六</string>
    <string name="friday">周五</string>
    <string name="thursday">周四</string>
    <string name="wednesday">周三</string>
    <string name="tuesday">周二</string>
</resources>
