<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.home.classaffairs.classtimetable.ClassTimetableActivity">

    <com.witaction.common.widget.HeaderView
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:Title="@string/class_timetable" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" />

        <View style="@style/v_line" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/monday"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />

        <View style="@style/v_line" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tuesday"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />

        <View style="@style/v_line" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wednesday"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />

        <View style="@style/v_line" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thursday"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />

        <View style="@style/v_line" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/friday"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />

        <View style="@style/v_line" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/saturday"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />

        <View style="@style/v_line" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sunday"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <View style="@style/h_line" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
</LinearLayout>