<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.main.my.accountset.collectface.CollectFaceActivity">

    <com.witaction.common.widget.HeaderView
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:Title="@string/face_collect" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center"
        android:padding="@dimen/dp_05"
        android:text="@string/please_user_upload_three_face_photo"
        android:textColor="@color/green"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_05"
        android:text="@string/shooting_without_glasses"
        android:textColor="@color/green"
        android:textSize="@dimen/sp_14" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_first_face"
                android:layout_width="@dimen/dp_90"
                android:layout_height="@dimen/dp_120"
                android:scaleType="centerCrop"
                android:src="@drawable/layer_list_collect_face" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:text="@string/first_face"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <ImageView
                android:id="@+id/img_second_face"
                android:layout_width="@dimen/dp_90"
                android:layout_height="@dimen/dp_120"
                android:scaleType="centerCrop"
                android:src="@drawable/layer_list_collect_face" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:text="@string/second_face"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <ImageView
                android:id="@+id/img_third_face"
                android:layout_width="@dimen/dp_90"
                android:layout_height="@dimen/dp_120"
                android:scaleType="centerCrop"
                android:src="@drawable/layer_list_collect_face" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:text="@string/third_face"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>