<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.main.my.accountset.realname.RealNameActivity">

    <com.witaction.common.widget.HeaderView
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:Title="@string/real_name" />

    <com.witaction.common.widget.ClearEditTextView
        android:id="@+id/et_real_name"
        style="@style/EditTextStyle"
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_14"
        android:hint="@string/please_input_real_name" />

    <View
        style="@style/h_line"
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_14" />

    <Button
        android:id="@+id/btn_commit"
        style="@style/ButtonStyle"
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_14"
        android:enabled="false"
        android:text="@string/commit" />
</LinearLayout>