<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ItemPaddingStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_marginEnd="@dimen/dp_10"
        android:src="@mipmap/icon_home_placeholder" />

    <TextView
        android:id="@+id/tv_stu_name"
        style="@style/Text16Style"
        android:layout_marginTop="@dimen/dp_05"
        android:layout_toEndOf="@id/img_avatar"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/tv_stu_no"
        style="@style/Text14Style"
        android:layout_below="@id/tv_stu_name"
        android:layout_toEndOf="@id/img_avatar"
        android:text="@string/app_name"
        android:textColor="@color/grey" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/tv_stu_status_manage"
            style="@style/Text14Style"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@drawable/shape_radius_stroke_green"
            android:padding="@dimen/dp_05"
            android:text="@string/stu_status_manage"
            android:textColor="@color/green" />

        <TextView
            android:id="@+id/tv_stu_face_manage"
            style="@style/Text14Style"
            android:background="@drawable/shape_stroke_radius_blue"
            android:padding="@dimen/dp_05"
            android:text="@string/face_manage"
            android:textColor="@color/blue" />
    </LinearLayout>
</RelativeLayout>